simulado-aws-backend/src/main/resources/services/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-teste
spec:
  backend:
    serviceName: nginx-node-port
    servicePort: 80
